===============================================================================

v2.8.3 PRE 1

- Fullscreen resolution can now be selected.
- Added 4 parametrable filters for stereo delay.
- New effects:
  2D: Set stereo filter type.
  2E: Set stereo filter cutoff.
  2F: Set stereo filter resonance.
- Midi data range is now correctly scaled: row data of FF will be sent as 127.

v2.8.2

- Patterns wouldn't scroll sometimes when starting to play, fixed.
- Note volume from channels (volume columns and effects 03) are now handled
  in the velocity sent to midi output.
- Changed LCTRL + F1 / F2 (Decrease / Increase editing step)
  to LCTRL + F2 / F4 due to Mac OS "interfering".
- Fixed Midi handling on Linux and Mac OS.
- Fixed the keyboard shortcuts on Mac OS.
- Typos in the manual: Transpose to 1 octave higher shortcuts
  are LCTRL + K and LCTRL + LSHIFT + K.
- Replaced pink noise with triangle waveform in synth.
- White noise is now twice as loud to be on par with other waveforms loudness.
- Added a function to hard sync OSC 1 to OSC 2.
- Inserting or deleting a track didn't modify the other patterns data.
- Fixed an ugly visual bug that occured when changing colors during playing.
- Added tracks header foreground color modifier.
- Sub oscillator can now be scaled from oscillator 1 by semitones.
- Maths combiner functions are also used for sub oscillator.
- Fixed various bugs here and there.
- VU meters are now displayed on a single line and a much less sensitive.
- Removed support for antediluvian NoiseTrekker 1/2 modules & instruments, 
  they were only supported for salvage and conversion purposes.
- Saving a pattern without any currently selected block
  will save the entire pattern into the file.
- New logo !
- Fixed Linux audio driver.

v2.8.1

- Channels LFO carriers are now properly reseted at playing start.
- Channels LFO data can now be sent to the channel filter cutoff, 
  volume and panning.
- Added a channel LFO frequency scaler.
- Added these effects: